# carla_apollo_final

./: carla-apollo-bridge_run.sh  nohup.out  player_vehicle.py  player_vehicle_relay.py  run_challenge.sh  run_challenge_str.sh
apollo_launch/: challenge.launch
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/carla_msgs/: CarlaCollisionEvent.h  CarlaEgoVehicleControl.h  CarlaEgoVehicleInfo.h  CarlaEgoVehicleInfoWheel.h  CarlaEgoVehicleStatus.h  CarlaLaneInvasionEvent.h  CarlaMapInfo.h
catkin_ws/devel/lib/pkgconfig/: carla_apollo_bridge.pc  carla_ego_vehicle.pc  carla_manual_control.pc  carla_msgs.pc  carla_ros_bridge.pc
catkin_ws/devel/share/carla_apollo_bridge/cmake/: carla_apollo_bridgeConfig.cmake
catkin_ws/devel/share/carla_ego_vehicle/cmake/: carla_ego_vehicleConfig.cmake
catkin_ws/devel/share/carla_manual_control/cmake/: carla_manual_controlConfig.cmake
catkin_ws/devel/share/carla_msgs/cmake/: carla_msgs-msg-paths.cmake  carla_msgsConfig.cmake
catkin_ws/src/: carla-apollo-ros-bridge  carla-ros-bridge  carla_ros_bridge
catkin_ws/src/carla_apollo_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/carla_apollo_bridge/launch/: carla_apollo_bridge.launch  carla_apollo_bridge_common.launch  carla_apollo_bridge_with_manual_control.launch  tf.launch
catkin_ws/src/carla_apollo_bridge/src/carla_apollo_bridge/: carla_to_apollo_waypoints
challenge/: ApolloRosAgent.py  results.json  start.sh
results/: read_results.py  results.json  total_results.csv
(+35 files in other folders)
